<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_library">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_settings">Поделиться приложением</string>
    <string name="support_settings">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="massage_to_share">Чтобы ознакомиться с курсом перейдите по ссылке: https://practicum.yandex.com/profile/android-developer/</string>
    <string name="my_email">tetyanagamma@gmail.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="test_track_name">Smells Like Teen Spiritytrdghhj;kkkkkkkkkkkkkkkkkkkk</string>
    <string name="test_artist_name">Nirvanannnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn</string>
    <string name="test_track_time">5:01</string>
    <string name="text_not_found">Ничего не нашлось</string>
    <string name="text_not_connection">Проблемы со связью</string>
    <string name="text_try_to_connect">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_update">Обновить</string>
    <string name="search_history_text">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="track_progress_time">00:00</string>
    <string name="unknown_date">Дата неизвестна</string>
    <string name="media">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="newPlayList">Новый плейлист</string>
    <string name="not_created_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="button_create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="dialog_question">Завершить создание плейлиста?</string>
    <string name="dialog_negative_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancle">Отмена</string>
    <string name="dialog_finish">Завершить</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="button_no">НЕТ</string>
    <string name="button_yes">ДА</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_deleted">Плейлист успешно удален</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="playlist_updated">Плейлист успешно обновлен</string>
    <string name="error_updating_playlist">Не удалось обновить плейлист</string>

</resources>