<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/Toolbar.TitleText"
        android:layout_marginBottom="24dp"
        app:title="@string/button_settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_switch_theme"
        style="@style/SwitchStyle"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:paddingStart="@dimen/list_padding"
        android:paddingEnd="@dimen/small_padding"
        android:text="@string/dark_theme"
        android:textAppearance="@style/SwitchTextAppearance"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_share"
        style="@style/SettingsTextViewStyle"
        android:drawableEnd="@drawable/baseline_share_24"
        android:text="@string/share_settings" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_support"
        style="@style/SettingsTextViewStyle"
        android:drawableEnd="@drawable/baseline_support_agent_24"
        android:text="@string/support_settings" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_user_agreement"
        style="@style/SettingsTextViewStyle"
        android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
        android:text="@string/user_agreement" />

</LinearLayout>