<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:foreground="?attr/selectableItemBackground"
   >

    <ImageView
        android:id="@+id/track_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_weight="4"
        >

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="15"
            android:maxLines="1"
            android:text="@string/test_track_name"
            android:textAppearance="@style/SwitchTextAppearance"
            app:layout_constraintBottom_toTopOf="@id/track_artist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/track_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="15"
            android:maxLines="1"
            android:text="@string/test_artist_name"
            android:textAppearance="@style/TrackArtistAndTimeText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/track_name"
            app:layout_constraintTop_toBottomOf="@+id/track_name" />

        <ImageView
            android:id="@+id/dot_divider"
            style="@style/DotDividerImageStyle"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/track_artist"
            app:layout_constraintStart_toEndOf="@id/track_artist"
            app:layout_constraintTop_toTopOf="@+id/track_artist" />

        <TextView
            android:id="@+id/track_time"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginStart="5dp"
            android:text="@string/test_track_time"
            android:textAppearance="@style/TrackArtistAndTimeText"
            app:layout_constraintBottom_toBottomOf="@+id/dot_divider"
            app:layout_constraintStart_toEndOf="@id/dot_divider"
            app:layout_constraintTop_toTopOf="@+id/dot_divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/track_details"
        style="@style/ForwardIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"/>
</LinearLayout>