<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- заголовок + back -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newPlaylist_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Toolbar.TitleText"
        app:title="@string/new_playlist"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        />

    <!-- рамка для загрузки картинки -->
    <ImageView
        android:id="@+id/image_addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/newPlaylist_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/add_cover"
        android:clickable="true"/>

    <!-- Поле для ввода названия плейлиста -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_playlistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@id/image_addPhoto"
        android:hint="@string/playlist_name"
        app:hintTextAppearance="@style/HintTextStyle"
        app:hintTextColor="@color/hint_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="?attr/colorOutline"
        app:hintEnabled="true"
        tools:focused="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:inputType="text"
            android:textAppearance="@style/InputTextStyle"
            android:background="@null"
            tools:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для ввода описания плейлиста -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_playlistDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/input_playlistName"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/playlist_description"
        app:hintTextAppearance="@style/HintTextStyle"
        app:hintTextColor="@color/hint_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="?attr/colorOutline"
        app:hintEnabled="true"
        tools:focused="true"
        tools:boxStrokeColor="@android:color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:inputType="text"
            android:textAppearance="@style/InputTextStyle"
            android:background="@null"
            tools:text=""
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_createPlaylist"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="17dp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:text="@string/button_create"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:enabled="false"
        android:background="@drawable/button_create"

        />



</androidx.constraintlayout.widget.ConstraintLayout>
