<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.screen.SearchFragment">

    <!-- заголовок + back -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        style="@style/Toolbar.TitleText"
        app:title="@string/button_search" />

    <!-- Поле поиска -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_padding"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/list_padding">

        <EditText
            android:id="@+id/serch_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/button_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:saveEnabled="false"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clear_icon"
            style="@style/ClearIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="136dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <!-- Список треков -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <!-- Placeholder для ненайденных треков -->
    <LinearLayout
        android:id="@+id/notFound_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_notFound"
            style="@style/NotFoundIconStyle"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/text_notFound"
            style="@style/NotFoundTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <!-- Placeholder для ошибки поиска -->
    <LinearLayout
        android:id="@+id/error_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_error"
            style="@style/ImageErrorStyle"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/text_noConnection"
            style="@style/NotFoundTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/text_not_connection" />

        <TextView
            android:id="@+id/text_try_to_Connect"
            style="@style/NotFoundTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/text_try_to_connect" />

        <Button
            android:id="@+id/button_update"
            style="@style/ButtonUpdateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp" />


    </LinearLayout>

    <!-- Placeholder для истории поиска -->
    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/history_headder"
            style="@style/SearchHistoryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="18dp"
            android:paddingBottom="12dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_track_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/button_clear_history"
            style="@style/ButtonUpdateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/clear_history" />


    </LinearLayout>

</LinearLayout>